upd analytics, articles, docs-item, docs

--- a/site/analytics.html
+++ b/site/analytics.html
@@ -413,7 +413,17 @@
                 <div class="date">Добавлена: 10 сентября 2014</div>
                 <div class="comments"><a href="#">51</a></div>
                 <div class="views">2726</div>
+                <div class="irating irating_fl">
+                  <ul>
+                    <li class="star"></li>
+                    <li class="star"></li>
+                    <li class="star"></li>
+                    <li></li>
+                    <li></li>
+                  </ul>
+                </div>
               </div>
+              <div class="tags mar-bot-20"><a href="#" class="tags-item js-open-coming-soon"><span class="name">Машиностроение</span><span class="count empty"></span></a><a href="#" class="tags-item js-open-coming-soon"><span class="name">Металлообработка</span><span class="count">388</span></a></div>
               <div class="bname">
                 <h1>Состояние науки в Российской Федерации</h1>
               </div>
