--- a/site/articles.html
+++ b/site/articles.html
@@ -386,16 +386,39 @@
             <p>Аналитические статьи на тему строительства промышленных и иных объектов</p>
           </div>
           <div class="main-left">
+            <div class="search-con">
+              <form action="#">
+                <input type="text" placeholder="Быстрый поиск по аналитическим статьям" class="inp-text">
+                <input type="submit" value="" class="inp-submit">
+              </form>
+            </div>
             <div class="box-articles">
+              <div class="heading">
+                <div class="heading-left_sort">Сортировать по:						</div>
+                <div class="heading-right_sort"><a href="#">Пользовательскому рейтингу <span></span></a><a href="#">
+                     
+                    Названию организации<span> </span></a></div>
+              </div>
               <div class="item">
                 <div class="iprev"><img src="img/content/180-135-1.jpg" alt=""></div>
                 <div class="icon">
+                  <div class="idate">10 сентября 2014</div>
                   <div class="iname"><a href="#">Состояние науки российской федерации</a></div>
-                  <div class="itext">Взлет строителя сетей связи «Инфра инжиниринг» хорошо показывает, что такое история успеха в России. Основные активы «Инфра» получила от компании, возможно связанной с бывшим министром связи, а основные заказы — от госхолдинга, в котором работали приятели</div>
-                  <div class="imore"> <a href="#">Читать полностью</a></div>
-                  <div class="imeta">
-                    <div class="date">10 сентября 2014</div>
-                    <div class="right">
+                  <div class="irating mar-bot-10 irating_margin2">
+                    <ul>
+                      <li class="star"></li>
+                      <li class="star"></li>
+                      <li class="star"></li>
+                      <li></li>
+                      <li></li>
+                    </ul>
+                  </div>
+                  <div class="itext lh-small">
+                    <p>Взлет строителя сетей связи «Инфра инжиниринг» хорошо показывает, что такое история успеха в России.</p>
+                  </div>
+                  <div class="imeta-info">
+                    <div class="tags col-2"><a href="#" class="tags-item"><span class="name">Выставки</span><span class="count">12</span></a><a href="#" class="tags-item"><span class="name">Машиностроение</span><span class="count empty"></span></a></div>
+                    <div class="imeta col-2 col-fix">
                       <div class="comments"><a href="#">51</a></div>
                       <div class="views"><a href="#">225</a></div>
                     </div>
@@ -405,12 +428,23 @@
               <div class="item">
                 <div class="iprev"><img src="img/content/180-135-2.jpg" alt=""></div>
                 <div class="icon">
-                  <div class="iname"><a href="#">Модернизация КРУ и КСО</a></div>
-                  <div class="itext">Взлет строителя сетей связи «Инфра инжиниринг» хорошо показывает, что такое история успеха в России. Основные активы «Инфра» получила от компании, возможно связанной с бывшим министром связи, а основные заказы — от госхолдинга, в котором работали приятели</div>
-                  <div class="imore"> <a href="#">Читать полностью</a></div>
-                  <div class="imeta">
-                    <div class="date">10 сентября 2014</div>
-                    <div class="right">
+                  <div class="idate">10 сентября 2014</div>
+                  <div class="iname"><a href="#">Состояние науки российской федерации</a></div>
+                  <div class="irating mar-bot-10 irating_margin2">
+                    <ul>
+                      <li class="star"></li>
+                      <li class="star"></li>
+                      <li class="star"></li>
+                      <li></li>
+                      <li></li>
+                    </ul>
+                  </div>
+                  <div class="itext lh-small">
+                    <p>Взлет строителя сетей связи «Инфра инжиниринг» хорошо показывает, что такое история успеха в России.</p>
+                  </div>
+                  <div class="imeta-info">
+                    <div class="tags col-2"><a href="#" class="tags-item"><span class="name">Выставки</span><span class="count">12</span></a><a href="#" class="tags-item"><span class="name">Машиностроение</span><span class="count empty"></span></a><a href="#" class="tags-item"><span class="name">Интересный длинный тег</span><span class="count empty"></span></a></div>
+                    <div class="imeta col-2 col-fix">
                       <div class="comments"><a href="#">51</a></div>
                       <div class="views"><a href="#">225</a></div>
                     </div>
@@ -420,27 +454,23 @@
               <div class="item">
                 <div class="iprev"><img src="img/content/180-135-1.jpg" alt=""></div>
                 <div class="icon">
+                  <div class="idate">10 сентября 2014</div>
                   <div class="iname"><a href="#">Состояние науки российской федерации</a></div>
-                  <div class="itext">Взлет строителя сетей связи «Инфра инжиниринг» хорошо показывает, что такое история успеха в России. Основные активы «Инфра» получила от компании, возможно связанной с бывшим министром связи, а основные заказы — от госхолдинга, в котором работали приятели</div>
-                  <div class="imore"> <a href="#">Читать полностью</a></div>
-                  <div class="imeta">
-                    <div class="date">10 сентября 2014</div>
-                    <div class="right">
-                      <div class="comments"><a href="#">51</a></div>
-                      <div class="views"><a href="#">225</a></div>
-                    </div>
+                  <div class="irating mar-bot-10 irating_margin2">
+                    <ul>
+                      <li class="star"></li>
+                      <li class="star"></li>
+                      <li class="star"></li>
+                      <li></li>
+                      <li></li>
+                    </ul>
                   </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="iprev"><img src="img/content/180-135-1.jpg" alt=""></div>
-                <div class="icon">
-                  <div class="iname"><a href="#">Состояние науки российской федерации</a></div>
-                  <div class="itext">Взлет строителя сетей связи «Инфра инжиниринг» хорошо показывает, что такое история успеха в России. Основные активы «Инфра» получила от компании, возможно связанной с бывшим министром связи, а основные заказы — от госхолдинга, в котором работали приятели</div>
-                  <div class="imore"> <a href="#">Читать полностью</a></div>
-                  <div class="imeta">
-                    <div class="date">10 сентября 2014</div>
-                    <div class="right">
+                  <div class="itext lh-small">
+                    <p>Взлет строителя сетей связи «Инфра инжиниринг» хорошо показывает, что такое история успеха в России.</p>
+                  </div>
+                  <div class="imeta-info">
+                    <div class="tags col-2"><a href="#" class="tags-item"><span class="name">Выставки</span><span class="count">12</span></a><a href="#" class="tags-item"><span class="name">Машиностроение</span><span class="count empty"></span></a></div>
+                    <div class="imeta col-2 col-fix">
                       <div class="comments"><a href="#">51</a></div>
                       <div class="views"><a href="#">225</a></div>
                     </div>
@@ -450,12 +480,23 @@
               <div class="item">
                 <div class="iprev"><img src="img/content/180-135-2.jpg" alt=""></div>
                 <div class="icon">
-                  <div class="iname"><a href="#">Модернизация КРУ и КСО</a></div>
-                  <div class="itext">Взлет строителя сетей связи «Инфра инжиниринг» хорошо показывает, что такое история успеха в России. Основные активы «Инфра» получила от компании, возможно связанной с бывшим министром связи, а основные заказы — от госхолдинга, в котором работали приятели</div>
-                  <div class="imore"> <a href="#">Читать полностью</a></div>
-                  <div class="imeta">
-                    <div class="date">10 сентября 2014</div>
-                    <div class="right">
+                  <div class="idate">10 сентября 2014</div>
+                  <div class="iname"><a href="#">Состояние науки российской федерации</a></div>
+                  <div class="irating mar-bot-10 irating_margin2">
+                    <ul>
+                      <li class="star"></li>
+                      <li class="star"></li>
+                      <li class="star"></li>
+                      <li></li>
+                      <li></li>
+                    </ul>
+                  </div>
+                  <div class="itext lh-small">
+                    <p>Взлет строителя сетей связи «Инфра инжиниринг» хорошо показывает, что такое история успеха в России.</p>
+                  </div>
+                  <div class="imeta-info">
+                    <div class="tags col-2"><a href="#" class="tags-item"><span class="name">Выставки</span><span class="count">12</span></a><a href="#" class="tags-item"><span class="name">Машиностроение</span><span class="count empty"></span></a><a href="#" class="tags-item"><span class="name">Интересный длинный тег</span><span class="count empty"></span></a></div>
+                    <div class="imeta col-2 col-fix">
                       <div class="comments"><a href="#">51</a></div>
                       <div class="views"><a href="#">225</a></div>
                     </div>
@@ -465,27 +506,23 @@
               <div class="item">
                 <div class="iprev"><img src="img/content/180-135-1.jpg" alt=""></div>
                 <div class="icon">
+                  <div class="idate">10 сентября 2014</div>
                   <div class="iname"><a href="#">Состояние науки российской федерации</a></div>
-                  <div class="itext">Взлет строителя сетей связи «Инфра инжиниринг» хорошо показывает, что такое история успеха в России. Основные активы «Инфра» получила от компании, возможно связанной с бывшим министром связи, а основные заказы — от госхолдинга, в котором работали приятели</div>
-                  <div class="imore"> <a href="#">Читать полностью</a></div>
-                  <div class="imeta">
-                    <div class="date">10 сентября 2014</div>
-                    <div class="right">
-                      <div class="comments"><a href="#">51</a></div>
-                      <div class="views"><a href="#">225</a></div>
-                    </div>
+                  <div class="irating mar-bot-10 irating_margin2">
+                    <ul>
+                      <li class="star"></li>
+                      <li class="star"></li>
+                      <li class="star"></li>
+                      <li></li>
+                      <li></li>
+                    </ul>
                   </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="iprev"><img src="img/content/180-135-1.jpg" alt=""></div>
-                <div class="icon">
-                  <div class="iname"><a href="#">Состояние науки российской федерации</a></div>
-                  <div class="itext">Взлет строителя сетей связи «Инфра инжиниринг» хорошо показывает, что такое история успеха в России. Основные активы «Инфра» получила от компании, возможно связанной с бывшим министром связи, а основные заказы — от госхолдинга, в котором работали приятели</div>
-                  <div class="imore"> <a href="#">Читать полностью</a></div>
-                  <div class="imeta">
-                    <div class="date">10 сентября 2014</div>
-                    <div class="right">
+                  <div class="itext lh-small">
+                    <p>Взлет строителя сетей связи «Инфра инжиниринг» хорошо показывает, что такое история успеха в России.</p>
+                  </div>
+                  <div class="imeta-info">
+                    <div class="tags col-2"><a href="#" class="tags-item"><span class="name">Выставки</span><span class="count">12</span></a><a href="#" class="tags-item"><span class="name">Машиностроение</span><span class="count empty"></span></a></div>
+                    <div class="imeta col-2 col-fix">
                       <div class="comments"><a href="#">51</a></div>
                       <div class="views"><a href="#">225</a></div>
                     </div>
@@ -495,27 +532,23 @@
               <div class="item">
                 <div class="iprev"><img src="img/content/180-135-2.jpg" alt=""></div>
                 <div class="icon">
-                  <div class="iname"><a href="#">Модернизация КРУ и КСО</a></div>
-                  <div class="itext">Взлет строителя сетей связи «Инфра инжиниринг» хорошо показывает, что такое история успеха в России. Основные активы «Инфра» получила от компании, возможно связанной с бывшим министром связи, а основные заказы — от госхолдинга, в котором работали приятели</div>
-                  <div class="imore"> <a href="#">Читать полностью</a></div>
-                  <div class="imeta">
-                    <div class="date">10 сентября 2014</div>
-                    <div class="right">
-                      <div class="comments"><a href="#">51</a></div>
-                      <div class="views"><a href="#">225</a></div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="iprev"><img src="img/content/180-135-1.jpg" alt=""></div>
-                <div class="icon">
+                  <div class="idate">10 сентября 2014</div>
                   <div class="iname"><a href="#">Состояние науки российской федерации</a></div>
-                  <div class="itext">Взлет строителя сетей связи «Инфра инжиниринг» хорошо показывает, что такое история успеха в России. Основные активы «Инфра» получила от компании, возможно связанной с бывшим министром связи, а основные заказы — от госхолдинга, в котором работали приятели</div>
-                  <div class="imore"> <a href="#">Читать полностью</a></div>
-                  <div class="imeta">
-                    <div class="date">10 сентября 2014</div>
-                    <div class="right">
+                  <div class="irating mar-bot-10 irating_margin2">
+                    <ul>
+                      <li class="star"></li>
+                      <li class="star"></li>
+                      <li class="star"></li>
+                      <li></li>
+                      <li></li>
+                    </ul>
+                  </div>
+                  <div class="itext lh-small">
+                    <p>Взлет строителя сетей связи «Инфра инжиниринг» хорошо показывает, что такое история успеха в России.</p>
+                  </div>
+                  <div class="imeta-info">
+                    <div class="tags col-2"><a href="#" class="tags-item"><span class="name">Выставки</span><span class="count">12</span></a><a href="#" class="tags-item"><span class="name">Машиностроение</span><span class="count empty"></span></a><a href="#" class="tags-item"><span class="name">Интересный длинный тег</span><span class="count empty"></span></a></div>
+                    <div class="imeta col-2 col-fix">
                       <div class="comments"><a href="#">51</a></div>
                       <div class="views"><a href="#">225</a></div>
                     </div>
