--- a/site/docs-item.html
+++ b/site/docs-item.html
@@ -387,10 +387,14 @@
                 <div class="views">2726</div>
               </div>
               <div class="bname">
-                <h1>Свидетельство о государственной регистрации программы для ЭВМ</h1>
+                <h1>Свидетельство о государственной  <br>регистрации программы для ЭВМ</h1>
                 <p>№ 2013610190 от 09.01.2013</p>
               </div>
+              <p>Динамическое уравнение Эйлера, согласно третьему закону Ньютона, <br>изменяет слабоминерализованный бентос. </p>
+              <div class="tags mar-bot-20"><a href="#" class="tags-item js-open-coming-soon"><span class="name">Машиностроение</span><span class="count empty"></span></a><a href="#" class="tags-item js-open-coming-soon"><span class="name">Металлообработка</span><span class="count">388</span></a></div>
+              <div class="mar-bot-30"><a href="#" class="btn-orange-wide inline">Скачать</a></div>
               <div class="bcon bcon-text-style"><img src="img/content/patent.jpg" alt=""></div>
+              <div class="mar-bot-3hgh0"><a href="#" class="btn-orange-wide inline">Скачать</a></div>
             </div>
           </div>
           <div class="main-right">
