--- a/site/docs.html
+++ b/site/docs.html
@@ -393,6 +393,25 @@
                   <div class="date">Добавлен: 13 октября 2012</div>
                   <div class="text">Свидетельство о государственной регистрации программы для ЭВМ № 2013610190 от 09.01.2013 (заявка № 2012619800).</div>
                   <div class="subtext">Аспирант Назимов Алексей Игоревич, физический факультет, 2 год обучения</div>
+                  <div class="tags"><a href="#" class="tags-item"><span class="name">Выставки</span><span class="count">12</span></a><a href="#" class="tags-item"><span class="name">Машиностроение</span><span class="count empty"></span></a></div>
+                </div>
+              </div>
+              <div class="item">
+                <div class="file-list"><a href="#">JPG - 7 Мб</a><a href="#">PDF - 12 Мб</a></div>
+                <div class="file-desc">
+                  <div class="date">Добавлен: 13 октября 2012</div>
+                  <div class="text">Свидетельство о государственной регистрации программы для ЭВМ № 2013610190 от 09.01.2013 (заявка № 2012619800).</div>
+                  <div class="subtext">Аспирант Назимов Алексей Игоревич, физический факультет, 2 год обучения</div>
+                  <div class="tags"><a href="#" class="tags-item"><span class="name">Выставки</span><span class="count">12</span></a><a href="#" class="tags-item"><span class="name">Машиностроение</span><span class="count empty"></span></a></div>
+                </div>
+              </div>
+              <div class="item">
+                <div class="file-list"><a href="#">JPG - 7 Мб</a><a href="#">PDF - 12 Мб</a></div>
+                <div class="file-desc">
+                  <div class="date">Добавлен: 13 октября 2012</div>
+                  <div class="text">Свидетельство о государственной регистрации программы для ЭВМ № 2013610190 от 09.01.2013 (заявка № 2012619800).</div>
+                  <div class="subtext">Аспирант Назимов Алексей Игоревич, физический факультет, 2 год обучения</div>
+                  <div class="tags"><a href="#" class="tags-item"><span class="name">Выставки</span><span class="count">12</span></a><a href="#" class="tags-item"><span class="name">Машиностроение</span><span class="count empty"></span></a></div>
                 </div>
               </div>
               <div class="item">
@@ -409,6 +428,7 @@
                   <div class="date">Добавлен: 13 октября 2012</div>
                   <div class="text">Свидетельство о государственной регистрации программы для ЭВМ № 2013610190 от 09.01.2013 (заявка № 2012619800).</div>
                   <div class="subtext">Аспирант Назимов Алексей Игоревич, физический факультет, 2 год обучения</div>
+                  <div class="tags"><a href="#" class="tags-item"><span class="name">Выставки</span><span class="count">12</span></a><a href="#" class="tags-item"><span class="name">Машиностроение</span><span class="count empty"></span></a></div>
                 </div>
               </div>
               <div class="item">
@@ -417,6 +437,7 @@
                   <div class="date">Добавлен: 13 октября 2012</div>
                   <div class="text">Свидетельство о государственной регистрации программы для ЭВМ № 2013610190 от 09.01.2013 (заявка № 2012619800).</div>
                   <div class="subtext">Аспирант Назимов Алексей Игоревич, физический факультет, 2 год обучения</div>
+                  <div class="tags"><a href="#" class="tags-item"><span class="name">Выставки</span><span class="count">12</span></a><a href="#" class="tags-item"><span class="name">Машиностроение</span><span class="count empty"></span></a></div>
                 </div>
               </div>
               <div class="item">
@@ -425,6 +446,7 @@
                   <div class="date">Добавлен: 13 октября 2012</div>
                   <div class="text">Свидетельство о государственной регистрации программы для ЭВМ № 2013610190 от 09.01.2013 (заявка № 2012619800).</div>
                   <div class="subtext">Аспирант Назимов Алексей Игоревич, физический факультет, 2 год обучения</div>
+                  <div class="tags"><a href="#" class="tags-item"><span class="name">Выставки</span><span class="count">12</span></a><a href="#" class="tags-item"><span class="name">Машиностроение</span><span class="count empty"></span></a></div>
                 </div>
               </div>
               <div class="item">
@@ -433,22 +455,7 @@
                   <div class="date">Добавлен: 13 октября 2012</div>
                   <div class="text">Свидетельство о государственной регистрации программы для ЭВМ № 2013610190 от 09.01.2013 (заявка № 2012619800).</div>
                   <div class="subtext">Аспирант Назимов Алексей Игоревич, физический факультет, 2 год обучения</div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="file-list"><a href="#">JPG - 7 Мб</a><a href="#">PDF - 12 Мб</a></div>
-                <div class="file-desc">
-                  <div class="date">Добавлен: 13 октября 2012</div>
-                  <div class="text">Свидетельство о государственной регистрации программы для ЭВМ № 2013610190 от 09.01.2013 (заявка № 2012619800).</div>
-                  <div class="subtext">Аспирант Назимов Алексей Игоревич, физический факультет, 2 год обучения</div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="file-list"><a href="#">JPG - 7 Мб</a><a href="#">PDF - 12 Мб</a></div>
-                <div class="file-desc">
-                  <div class="date">Добавлен: 13 октября 2012</div>
-                  <div class="text">Свидетельство о государственной регистрации программы для ЭВМ № 2013610190 от 09.01.2013 (заявка № 2012619800).</div>
-                  <div class="subtext">Аспирант Назимов Алексей Игоревич, физический факультет, 2 год обучения</div>
+                  <div class="tags"><a href="#" class="tags-item"><span class="name">Выставки</span><span class="count">12</span></a><a href="#" class="tags-item"><span class="name">Машиностроение</span><span class="count empty"></span></a></div>
                 </div>
               </div>
             </div>
