--- a/site/events.html
+++ b/site/events.html
@@ -506,6 +506,53 @@
             </div>
           </div>
           <div class="main-right">
+            <div class="box-sort-docs box-right">
+              <div class="bname">
+                <h3>Показать статьи</h3>
+              </div>
+              <div class="bcon">
+                <div class="dates">
+                  <div class="legend">c датой публикации</div>
+                  <div class="line">
+                    <div class="td"><span>от</span></div>
+                    <div class="td">
+                      <input type="text" placeholder="дата от" class="js-calendar-widget calendar-widget-pop">
+                    </div>
+                    <div class="td"><a href="#" class="js-open-cal cal"></a></div>
+                  </div>
+                  <div class="line">
+                    <div class="td"><span>до</span></div>
+                    <div class="td">
+                      <input type="text" placeholder="дата до" class="js-calendar-widget calendar-widget-pop2">
+                    </div>
+                    <div class="td"><a href="#" class="js-open-cal cal"></a></div>
+                  </div>
+                </div>
+                <div class="checks">
+                  <div class="legend">Тип мероприятия</div>
+                  <div class="line">
+                    <input id="check-type-2" type="checkbox" name="radio" checked>
+                    <label for="check-type-2">Конференция</label>
+                  </div>
+                  <div class="line">
+                    <input id="check-type-3" type="checkbox" name="radio">
+                    <label for="check-type-3">Мастер-класс</label>
+                  </div>
+                </div>
+                <div class="checks">
+                  <div class="legend">В городе</div>
+                  <div class="line">
+                    <input id="check-city-2" type="checkbox" name="radio">
+                    <label for="check-city-2">Москва</label>
+                  </div>
+                  <div class="line">
+                    <input id="check-city-3" type="checkbox" name="radio">
+                    <label for="check-city-3">Пермь</label>
+                  </div>
+                </div>
+              </div>
+              <div class="action"><a href="#">Показать</a></div>
+            </div>
             <div class="box-news box-right box-news_dotted">
               <div class="bname">
                 <h3> <a href="#">Похожие события</a></h3>
