--- a/site/reports.html
+++ b/site/reports.html
@@ -517,7 +517,7 @@
             <div class="box-info">
               <div class="box">
                 <div class="bname">
-                  <h3>Оборудование</h3>
+                  <h3>Конструктор отчетов</h3>
                 </div>
                 <div class="bcon bcon-mod">
                   <table class="table-ind">
@@ -588,7 +588,7 @@
           <div class="main-right">
             <div class="boxside-docs box-right">
               <div class="bname">
-                <h3>Документы</h3>
+                <h3>Отчеты</h3>
               </div>
               <div class="bcon">
                 <div class="item">
@@ -605,11 +605,10 @@
                 </div>
               </div>
               <div class="badd"><a href="#">Добавить документ</a></div>
-              <div class="ball"><a href="#">Все документы</a></div>
+              <div class="ball"><a href="#">Все отчеты</a></div>
             </div>
             <div class="boxside-btns">
-              <div class="btn-reports btn-warning"><a href="#">Экспортировать</a></div>
-              <div class="btn-reports btn-primary"><a href="#">Распечатать</a></div>
+              <div class="btn-reports"><a href="#" class="btn-orange-big">Построить отчет</a></div>
             </div>
           </div>
         </div>
