--- a/site/requirements-comment.html
+++ b/site/requirements-comment.html
@@ -507,7 +507,11 @@
                 </div>
               </div>
               <div class="bmetabot right">
-                <div class="addd"><a href="#" class="btn-orange-big">Предложить решение</a></div>
+                <div class="order-service-cont_fl"><a href="#" class="btn-grey-dashed-big inline js-show-contacts">Показать контакты</a>
+                  <div class="contacts js-contacts-box">
+                    <div class="contacts-in"><span class="phone">+7 495 675 87 98</span><span class="email"><a href="#">email@email.com</a></span></div>
+                  </div><a href="#" class="btn-orange-big inline">Заказать услугу</a>
+                </div>
                 <div class="share small"><span>Поделиться</span>
                   <ul>
                     <li class="vk"><a href="#"></a></li>
