--- a/site/requirements.html
+++ b/site/requirements.html
@@ -386,6 +386,12 @@
             <p>Рынок предложений и услуг</p>
           </div>
           <div class="main-left">
+            <div class="search-con">
+              <form action="#">
+                <input type="text" placeholder="Быстрый поиск по потребностям" class="inp-text">
+                <input type="submit" value="" class="inp-submit">
+              </form>
+            </div>
             <div class="tabs-box">
               <ul class="tabs js-tabs">
                 <li class="tabs__item"><a href="#js-tab-service" class="tabs__link">в Услугах</a></li>
