add calendar month switch

--- a/site/main.html
+++ b/site/main.html
@@ -751,18 +751,34 @@
               <div class="bname">
                 <h3> <a href="#">События</a></h3>
               </div>
-              <div class="bcon">
-                <div class="item">
-                  <div class="idate">09.09 ></div>
-                  <div class="iname"> <a href="#">Конференция по промышленному дизайну</a></div>
+              <div class="bcon animate-height js-news-cal">
+                <div class="items month-09 month-01 month-02 month-03 month-04 month-05 month-06 month-07">
+                  <div class="item">
+                    <div class="idate">09.09 ></div>
+                    <div class="iname"> <a href="#">Конференция по промышленному дизайну</a></div>
+                  </div>
+                  <div class="item">
+                    <div class="idate">18.09 ></div>
+                    <div class="iname"> <a href="#">Конкурс проектов в области энергосбережения</a></div>
+                  </div>
+                  <div class="item">
+                    <div class="idate">22.09 ></div>
+                    <div class="iname"> <a href="#">Конкурс проектов в области энергосбережения</a></div>
+                  </div>
                 </div>
-                <div class="item">
-                  <div class="idate">18.09 ></div>
-                  <div class="iname"> <a href="#">Конкурс проектов в области энергосбережения</a></div>
-                </div>
-                <div class="item">
-                  <div class="idate">22.09 ></div>
-                  <div class="iname"> <a href="#">Конкурс проектов в области энергосбережения</a></div>
+                <div class="items month-10 hide">
+                  <div class="item">
+                    <div class="idate">09.10 ></div>
+                    <div class="iname"> <a href="#">Конференция по промышленному дизайну</a></div>
+                  </div>
+                  <div class="item">
+                    <div class="idate">18.10 ></div>
+                    <div class="iname"> <a href="#">Конкурс проектов в области энергосбережения</a></div>
+                  </div>
+                  <div class="item">
+                    <div class="idate">22.10 ></div>
+                    <div class="iname"> <a href="#">Конкурс проектов в области энергосбережения</a></div>
+                  </div>
                 </div>
               </div>
               <div class="calendar-wrap">
