--- a/site/equipments-item.html
+++ b/site/equipments-item.html
@@ -404,15 +404,17 @@
                     <div class="tags"><a href="#" class="tags-item js-open-coming-soon"><span class="name">Машиностроение</span><span class="count empty"></span></a><a href="#" class="tags-item js-open-coming-soon"><span class="name">Металлообработка</span><span class="count">388</span></a></div>
                   </div>
                   <div class="iprev"><img src="img/content/equip-1.jpg" alt=""></div>
+                  <p class="grey-without-strong"><strong>Назначение <br></strong>Изготовление деталей типа тел вращения</p>
+                  <p class="grey-without-strong"><strong>Описание <br></strong>Прецизионный токарный станок с ЧПУ выполнен по прогрессивной схеме компоновки с расположением револьверной головки на наклонных направляющих, что увеличивает жесткость конструкции, позволяет уменьшить размеры станка по ширине и оптимально распределить по направляющим нагрузки, образующиеся в процессе резания.</p>
+                  <p class="grey-without-strong"><strong>Основные характеристики <br></strong>Наибольший диаметр обрабатываемого изделия – 600 мм <br>Число управляемых координат – 2</p>
+                  <p class="grey-without-strong"><strong>Год выпуска: </strong>2012</p>
+                  <p class="grey-without-strong"><strong>Производитель: </strong>SOMAB, Франция</p>
+                  <p class="grey-without-strong"><strong>Состоаяние: </strong>новый</p>
+                  <p class="grey-without-strong"><strong>Порядок предоставления услуг по доступу к оборудованию: <br></strong>Передача в собственность </p>
+                  <p class="grey-without-strong"><strong>Организация (ВУЗ / ГНЦ): </strong>Национальный исследовательский Томский политехнический университет</p>
                 </div>
-                <p class="grey-without-strong"><strong>Назначение <br></strong>Изготовление деталей типа тел вращения</p>
-                <p class="grey-without-strong"><strong>Описание <br></strong>Прецизионный токарный станок с ЧПУ выполнен по прогрессивной схеме компоновки с расположением револьверной головки на наклонных направляющих, что увеличивает жесткость конструкции, позволяет уменьшить размеры станка по ширине и оптимально распределить по направляющим нагрузки, образующиеся в процессе резания.</p>
-                <p class="grey-without-strong"><strong>Основные характеристики <br></strong>Наибольший диаметр обрабатываемого изделия – 600 мм <br>Число управляемых координат – 2</p>
-                <p class="grey-without-strong"><strong>Год выпуска: </strong>2012</p>
-                <p class="grey-without-strong"><strong>Производитель:</strong>SOMAB, Франция</p>
-                <p class="grey-without-strong"><strong>Организация (ВУЗ / ГНЦ): </strong>Национальный исследовательский Томский политехнический университет</p>
               </div>
-              <div class="order-service-cont"><a href="#" class="btn-orange inline js-open-coming-soon">Заказать</a><a href="#" class="btn-grey-dashed js-show-contacts">Показать контакты</a>
+              <div class="order-service-cont"><a href="#" class="btn-orange-wide inline js-open-coming-soon width240">Заказать</a><a href="#" class="btn-grey-dashed js-show-contacts width240">Показать контакты</a>
                 <div class="contacts js-contacts-box"><span class="phone">+7 495 675 87 98</span><span class="email"><a href="#">email@email.com</a></span></div>
               </div>
               <div class="bmetabot">
@@ -450,7 +452,7 @@
                           <p> <strong class="reg-black">Организация (ВУЗ / ГНЦ): </strong>ООО «Лаборатории АМФОРА»</p>
                         </div>
                         <div class="tags"><a href="#" class="tags-item js-open-coming-soon"><span class="name">Выставки</span><span class="count">12</span></a><a href="#" class="tags-item"><span class="name">Машиностроение</span><span class="count empty"></span></a></div>
-                        <div class="order-service"><a href="#" class="btn-orange">Заказать</a></div>
+                        <div class="order-service"><a href="#" class="btn-orange width175">Заказать</a></div>
                         <div class="imeta">
                           <div class="right mar-top-20m">
                             <div class="comments"><a href="#">51</a></div>
@@ -477,7 +479,7 @@
                           <p> <strong class="reg-black">Организация (ВУЗ / ГНЦ): </strong>ООО «Лаборатории АМФОРА»</p>
                         </div>
                         <div class="tags"><a href="#" class="tags-item"><span class="name">Выставки</span><span class="count">12</span></a><a href="#" class="tags-item"><span class="name">Машиностроение</span><span class="count empty"></span></a></div>
-                        <div class="order-service"><a href="#" class="btn-orange">Заказать</a></div>
+                        <div class="order-service"><a href="#" class="btn-orange width175">Заказать</a></div>
                         <div class="imeta">
                           <div class="right mar-top-20m">
                             <div class="comments"><a href="#">51</a></div>
