--- a/site/services-item.html
+++ b/site/services-item.html
@@ -403,22 +403,28 @@
                     <div class="tags"><a href="#" class="tags-item"><span class="name">Круглый стол</span><span class="count empty"></span></a><a href="#" class="tags-item"><span class="name">Металлообработка</span><span class="count">388</span></a></div>
                   </div>
                   <div class="iprev"><img src="img/content/180-135-2.jpg" alt=""></div>
+                  <p><strong>Сведения о компании:</strong>
+                    <ul> 
+                      <li>оптическая микроскопия</li>
+                      <li>электронная микроскопия</li>
+                      <li>локальный микроанализ химического состава материалов</li>
+                      <li>дюраметрические исследования</li>
+                      <li>изучение прокаливаемости</li>
+                      <li>микро/макро травление для выявления микро/макро структуры</li>
+                      <li>анализ и обработка изображений (структурных составляющих, неметаллических включений, размер зерна и т.п.)</li>
+                    </ul>
+                  </p>
+                  <p class="grey-without-strong"><strong>Наименование: </strong>Промстройинжиниринг</p>
+                  <p class="grey-without-strong"><strong>Год основания: </strong>1992</p>
+                  <p class="grey-without-strong"><strong>Основные реализованные проекты в заявленной области: </strong>
+                    <ul>
+                      <li>Цех ремонта тяговых электродвигателей подвижного состава РЖД </li>
+                      <li>Участок изготовления корпусных деталей</li>
+                    </ul>
+                  </p>
+                  <p class="grey-without-strong"><strong>Выручка годовая: </strong>300 млн. руб.</p>
+                  <p class="grey-without-strong"><strong>Лицензия: </strong>Есть</p>
                 </div>
-                <p><strong>Выполняемые работы:</strong>
-                  <ul> 
-                    <li>оптическая микроскопия</li>
-                    <li>электронная микроскопия</li>
-                    <li>локальный микроанализ химического состава материалов</li>
-                    <li>дюраметрические исследования</li>
-                    <li>изучение прокаливаемости</li>
-                    <li>микро/макро травление для выявления микро/макро структуры</li>
-                    <li>анализ и обработка изображений (структурных составляющих, неметаллических включений, размер зерна и т.п.)</li>
-                  </ul>
-                </p>
-                <p class="grey-without-strong"><strong>Основные возможности: </strong>Исследования образцов и изделий из сплавов черных и цветных металлов.</p>
-                <p class="grey-without-strong"><strong>Производственая мощность: </strong>До 250 исследуемых образцов в месяц</p>
-                <p class="grey-without-strong"><strong>Аккредитация: </strong>есть</p>
-                <p class="grey-without-strong"><strong>Организация (ВУЗ / ГНЦ): </strong>Национальный исследовательский Томский политехнический университет</p>
               </div>
               <div class="order-service-cont"><a href="#" class="btn-orange inline">Заказать услугу</a><a href="#" class="btn-grey-dashed js-show-contacts">Показать контакты</a>
                 <div class="contacts js-contacts-box"><span class="phone">+7 495 675 87 98</span><span class="email"><a href="#">email@email.com</a></span></div>
