upd disscus: add search

--- a/site/disscus.html
+++ b/site/disscus.html
@@ -383,6 +383,12 @@
             <p>Все заведенные темы, которые можно найти по тегам, все последние комментарии, комментарии к разделам и т. д.</p>
           </div>
           <div class="main-left">
+            <div class="search-con">
+              <form action="#">
+                <input type="text" placeholder="Быстрый поиск по обсуждениям" class="inp-text">
+                <input type="submit" value="" class="inp-submit">
+              </form>
+            </div>
             <div class="box-articles">
               <div class="item-cloud-talks">
                 <div class="iprev">
